<resources>
    <string name="app_name">WorkFlow</string>
    <string name="ImgLogin">Login Image</string>
    <string name="MobileNumber">Enter your mobile number</string>
    <string name="mobile_otp_txt">4 digit OTP will be send to your phone</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="sendme_otp_btn">Send Me OTP</string>
    <string name="OtpVerification">OTP Verification</string>
    <string name="EnterotpTxt">Enter 6 digit OTP</string>
    <string name="submit_txt">Submit</string>
    <string name="update_txt">Update</string>
    <string name="cancel_txt">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="WelcomeTo">WELCOME TO</string>
    <string name="justErrorCode">EC </string>
    <string name="profilepics">profilePics</string>
    <string name="profile">Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="Nametxt">Name</string>
    <string name="Namehint">Name</string>
    <string name="UserIdtxt">User ID</string>
    <string name="UserIdHint">UserID</string>
    <string name="DeptTxt">Department</string>
    <string name="DeptHint">Department</string>
    <string name="Phonetxt">Phone Number</string>
    <string name="Phonehint">Phone Number</string>
    <string name="EmaiTxt">Email</string>
    <string name="EmailHint">Email</string>
    <string name="AddressTxt">Address</string>
    <string name="AddressHint">Address</string>
    <string name="time_zone_alert">won\'t work without automatic date/time and zone. Please enable automatic date/time and zone.</string>
    <string name="txtNavHome">Home</string>
    <string name="txtNavProfile">Profile</string>
    <string name="txtNavCalendar">Calendar</string>
    <string name="txtNavLeaveRequest">Request</string>
    <string name="txtNavChat">Chat</string>
    <string name="txtNavSignOut">Sign out</string>
    <string name="alert">Alert</string>
    <string name="internalError">Internal E</string>
    <string name="sendOTP">Send OTP</string>
    <string name="Otp6">"Enter 6 digit OTP send to - "</string>

    <string name="txtLeaveRequestTitle">Leave Request</string>
    <string name="txtViewLeaveStartDate">Start Date</string>
    <string name="hintLeaveStartDate">Enter Leave Start Date</string>
    <string name="txtViewLeaveEndDate">End Date</string>
    <string name="hintLeaveEndDate">Enter Leave End Date</string>
    <string name="btnLeaveRequest">Send Leave Request</string>


    <string name="txtMessageLeft">His Message</string>
    <string name="txtTimeLeft">11/02/2023 01: 59PM</string>
    <string name="txtReadLeft">Delivered</string>
    <string name="txtTimeRight">02/01/1990 06:19PM</string>
    <string name="txtMessageRight">Hello world</string>
    <string name="txtReadRight">DeliveredRight</string>
    <string name="txtNameptv">His name</string>
    <string name="txtOnline">Online</string>
    <string name="txtReceiverName_Chat">Receiver name</string>
    <string name="txtOnlineStatus">Online status</string>
    <string name="txtHintMessage">Input message</string>
    <string name="contentDesMessageSend">Message send</string>
    <string name="contentDesImageBlock">Image block</string>
    <string name="txtDeliveredLeft">Delivered</string>
    <string name="txtNameChatList">User name</string>
    <string name="txtLastMessage">Last message</string>

    <string name="txtCalendarTitle">Calendar</string>
    <string name="txtWorkSchedule">Work Schedule</string>
    <string name="editTxt">Edit Profile</string>
    <string name="txtRequestStatus"></string>
    <string name="txtApprove">Approve</string>
    <string name="txtDeny">Deny</string>
    <string name="txtConfirm">Confirm</string>
    <string name="txtUserName">User Name</string>
    <string name="hintUserName" />


</resources>