<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/base_background_layer_style">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/base_background_screen" />

    <ImageView
        android:id="@+id/profileBackArrow"
        android:layout_width="@dimen/backArrowWidth"
        android:layout_height="@dimen/backArrowHeight"
        android:layout_gravity="start"
        android:layout_margin="20dp"
        android:contentDescription="@string/profilepics"
        android:src="@drawable/ic_back_arrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/base_container_style">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:scrollbars="none"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:paddingBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/personal_information"
                    android:textColor="@color/theme_main_color_blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/Nametxt" />

                <TextView
                    android:id="@+id/settingCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/Namehint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/UserIdtxt" />

                <TextView
                    android:id="@+id/profileUserID"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/UserIdHint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/DeptTxt" />

                <TextView
                    android:id="@+id/settingDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/DeptHint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/Phonetxt" />

                <TextView
                    android:id="@+id/settingPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/Phonehint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/EmaiTxt" />

                <TextView
                    android:id="@+id/settingEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/EmailHint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/AddressTxt" />

                <TextView
                    android:id="@+id/settingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/AddressHint"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="85dp"
        android:scaleType="centerCrop">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/engineer_a"
            tools:ignore="MissingClass" />

    </FrameLayout>


</FrameLayout>