<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.EditProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_background_layer_style">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/base_background_screen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/base_container_style">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:paddingBottom="30dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/Nametxt" />

                <EditText
                    android:id="@+id/settingCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/Namehint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/UserIdtxt" />

                <EditText
                    android:id="@+id/profileUserID"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/UserIdHint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/DeptTxt" />

                <EditText
                    android:id="@+id/settingDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/DeptHint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/Phonetxt" />

                <EditText
                    android:id="@+id/settingPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/Phonehint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/EmaiTxt" />

                <EditText
                    android:id="@+id/settingEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/EmailHint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/AddressTxt" />

                <EditText
                    android:id="@+id/settingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/setting_pg_edittext_design"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/AddressHint"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/fragment_verify_otp_submit_button_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:background="@drawable/button_rounded_blue"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/submit_txt"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="85dp"
        android:scaleType="centerCrop">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/engineer_a"
            tools:ignore="MissingClass" />

    </FrameLayout>


</FrameLayout>